--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -1,17 +1,43 @@
 \section{Conclusion}
 
-Le développement de ce projet représente pour nous une grande première.
-Certains d’entre nous ont déjà un antécédent de programmation, mais cela
-semble dérisoire face à tous les besoins de ce projet. Beaucoup de temps et de
-travail a été et sera nécessaire, mais l’objectif est important. En effet, il est inévitable
-que nous sortirons tous beaucoup plus expérimentés que nous ne le sommes maintenant, ce qui est le but recherché. Nous espérons donc mettre à bien toutes les
-idées proposées dans ce document et que le résultat de ce projet soit de bonne
-qualité. Pour nous, avoir un résultat intéressant sera un accomplissement personnel car le développement sera une épreuve mais donnera un jeu amusant
-auquel nous serons, en tant que joueurs, satisfaits en y jouant.
+\begin{frame}{Deuxième soutenance}
+\begin{tikzpicture}
+\begin{axis} [title = Avancement de projet à la deuxième soutenance, xbar, symbolic y coords = {Documentation, Site web, Visuels \& Graphismes, Gameplay, Multijoueur, IA}, ytick = data, nodes near coords, enlarge y limits  = 0.2, xmin = 0, xmax = 100]
+\addplot coordinates {
+    (40,IA) 
+    (90,Multijoueur) 
+    (60,Gameplay) 
+    (60,Visuels \& Graphismes)
+    (100,Site web)
+    (100,Documentation)
+};
+\end{axis}
+\end{tikzpicture}
+\end{frame}
 
-Enfin, l'esprit de groupe sera également un point important de l'apprentissage c'est à dire savoir s'entraider, communiquer, s'organiser et planifier nos objectifs. Ce sont des points que l'on attend d'un ingénieur et qui nous seront demandés durant nos carrières professionnelles. Il est donc évident que la qualité de ce projet sera un reflet de nos capacités à évoluer au sein d'un groupe pour aller vers un même but.
+\begin{frame}{Dernière soutenance}
+\begin{tikzpicture}
+\begin{axis} [title = Avancement de projet à la dernière soutenance, xbar, symbolic y coords = {Visuels \& Graphismes, Gameplay, Multijoueur, IA}, ytick = data, nodes near coords, enlarge y limits  = 0.2, xmin = 0, xmax = 100]
+\addplot coordinates {
+    (80,IA) 
+    (100,Multijoueur) 
+    (80,Gameplay) 
+    (90,Visuels \& Graphismes)
+};
+\end{axis}
+\end{tikzpicture}
+\end{frame}
 
-\vfill
-\noindent\makebox[\linewidth]{\rule{.8\paperwidth}{.6pt}}\\[0.2cm]
-EPITA Toulouse - Projet S2 - 2022 \hfill Nyctalopia - gameHUB
-\noindent\makebox[\linewidth]{\rule{.8\paperwidth}{.6pt}}
+\begin{frame}[plain]
+	\polygons{
+	    \begin{center}
+	        \vspace{}
+    		\usebeamerfont{titlegraphic}{\inserttitlegraphic}
+    		
+    		\vspace{1cm}
+    		\usebeamerfont{title}{Merci de votre attention} 
+    		
+            \vspace{}
+		\end{center}
+	}
+\end{frame}
